// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PreviousNext /> Render must match inactive() 1`] = `
<div>
  <nav
    aria-label="Pagination"
    class="paginate-container previousnext-inactive"
  >
    <div
      class="pagination d-flex"
    >
      <a
        aria-label="Previous"
        href="#url"
        rel="previous"
      >
        &lt;
      </a>
      <span>
        Viewing 3 to 7
      </span>
      <a
        aria-label="Next"
        href="#url"
        rel="next"
      >
        &gt;
      </a>
    </div>
  </nav>
</div>
`;

exports[`<PreviousNext /> Render must match regular() 1`] = `
<div>
  <nav
    aria-label="Pagination"
    class="paginate-container"
  >
    <div
      class="pagination d-flex"
    >
      <a
        aria-label="Previous"
        href="#url"
        rel="previous"
      >
        &lt;
      </a>
      <span>
        Viewing 3 to 7
      </span>
      <a
        aria-label="Next"
        href="#url"
        rel="next"
      >
        &gt;
      </a>
    </div>
  </nav>
</div>
`;
